--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="enter">Entrar</string>
     <string name="create_account">Criar conta</string>
+    <string name="gymBrandLogo">Logotipo da marca de academia Gym De.</string>
 </resources>
