--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,11 @@
     <string name="name">Nome</string>
     <string name="confirm_password">Confirmar senha</string>
     <string name="register">Registrar</string>
+    <string name="myWorkouts">Meus Treinos</string>
+    <string name="health_articles">Artigos de saúde</string>
+    <string name="about_us">Sobre nós</string>
+    <string name="about_Gym_De">\""</string>
+    <string name="image_workout">Imagem do treino.</string>
+    <string name="home">Início</string>
+    <string name="me">Eu</string>
 </resources>
