--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="name">Nome</string>
     <string name="confirm_password">Confirmar senha</string>
     <string name="register">Registrar</string>
-    <string name="workouts">Treinos</string>
+    <string name="today_workouts">Treinos de hoje</string>
     <string name="health_articles">Artigos de saúde</string>
     <string name="about_us">Sobre nós</string>
     <string name="about_Gym_De">\""</string>
@@ -32,4 +32,6 @@
     <string name="new_workout">Novo treino</string>
     <string name="new_workout_btn_description">Botão para adicionar novo treino.</string>
     <string name="btn_edit_photo">Botão de editar foto.</string>
+    <string name="start">Iniciar</string>
+    <string name="edit">Editar</string>
 </resources>
