ref: refactor my workouts xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
     <string name="description">Descrição</string>
     <string name="alimentation">Alimentação</string>
     <string name="read_article">Ler artigo</string>
+    <string name="workouts">Treinos</string>
+    <string name="title_workout">Título de treino</string>
+    <string name="workout_day">Dia do treino.</string>
+    <string name="edit_workout">Botão editar treino.</string>
 </resources>
