--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,9 +40,18 @@
     <string name="read_article">Ler artigo</string>
     <string name="workouts">Treinos</string>
     <string name="title_workout">Título de treino</string>
-    <string name="workout_day">Dia do treino.</string>
+    <string name="workout_day">Dias do treino</string>
     <string name="edit_workout">Botão editar treino.</string>
     <string name="new_exercise">Novo exercício</string>
     <string name="title_exercise">Título exercício</string>
     <string name="exercise_description">Descrição de exercício.</string>
+    <string name="create_workout">Criar treino</string>
+    <string name="cancel">Cancelar</string>
+    <string name="monday">Segunda-feira</string>
+    <string name="tuesday">Terça-feira</string>
+    <string name="wednesday">Quarta-feira</string>
+    <string name="thursday">Quinta-feira</string>
+    <string name="friday">Sexta-feira</string>
+    <string name="saturday">Sábado</string>
+    <string name="sunday">Domingo</string>
 </resources>
