--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,7 @@
     <string name="no_valid_name">O nome não é valido.</string>
     <string name="no_valid_confirm_password">Senha e confirmar senha devem ser iguais.</string>
     <string name="create_success">Treino criado com sucesso.</string>
+    <string name="new_name">Novo nome</string>
+    <string name="new_description">Nova descrição</string>
+    <string name="save">Salvar</string>
 </resources>
