--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="new_name">Novo nome</string>
     <string name="new_description">Nova descrição</string>
     <string name="save">Salvar</string>
+    <string name="no_workout_today">Não há treinos marcados para hoje.</string>
 </resources>
