--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="similar_feature_update_workouts">Feature semelhante implementada ao atualizar treinos.</string>
     <string name="no_implementation">Feature não implementada.</string>
     <string name="workoutDays">Dias do treino: %1$s</string>
+    <string name="logout">Sair</string>
 </resources>
